Использовал другой  синтаксис для преобразования массива кнопок в list.